--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">lab3</string>
+    <string name="app_name">Lab3</string>
+    <string name="enter_your_name">Enter your name</string>
+    <string name="name_hint">Your name</string>
+    <string name="next">Next</string>
+    <string name="welcome">Welcome %s!</string>
+    <string name="thank_you">Thank You</string>
+    <string name="dont_call_me_that">Don\'t call me that</string>
 </resources>
